@@ -53,18 +53,18 @@ source_suffix = '.rst'
 master_doc = 'index'
 
 # General information about the project.
-project = u'gdeltPyR'
-copyright = u'2016, Linwood Creekmore III'
-author = u'Linwood Creekmore III'
+project = 'gdeltPyR'
+copyright = '2016, Linwood Creekmore III'
+author = 'Linwood Creekmore III'
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
 # built documents.
 #
 # The short X.Y version.
-version = u'0.1'
+version = '0.1'
 # The full version, including alpha/beta/rc tags.
-release = u'0'
+release = '0'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
@@ -263,8 +263,8 @@ latex_elements = {
 # (source start file, target name, title,
 #  author, documentclass [howto, manual, or own class]).
 latex_documents = [
-    (master_doc, 'gdeltPyR.tex', u'gdeltPyR Documentation',
-     u'Linwood Creekmore III', 'manual'),
+    (master_doc, 'gdeltPyR.tex', 'gdeltPyR Documentation',
+     'Linwood Creekmore III', 'manual'),
 ]
 
 # The name of an image file (relative to this directory) to place at the top of
@@ -305,7 +305,7 @@ latex_documents = [
 # One entry per manual page. List of tuples
 # (source start file, name, description, authors, manual section).
 man_pages = [
-    (master_doc, 'gdeltpyr', u'gdeltPyR Documentation',
+    (master_doc, 'gdeltpyr', 'gdeltPyR Documentation',
      [author], 1)
 ]
 
@@ -320,7 +320,7 @@ man_pages = [
 # (source start file, target name, title, author,
 #  dir menu entry, description, category)
 texinfo_documents = [
-    (master_doc, 'gdeltPyR', u'gdeltPyR Documentation',
+    (master_doc, 'gdeltPyR', 'gdeltPyR Documentation',
      author, 'gdeltPyR', 'One line description of project.',
      'Miscellaneous'),
 ]
