@@ -2,8 +2,8 @@
 # Filter functions for dataframes
 ##############################
 
-def cameos(x,codes):
+def cameos(x, codes):
     try:
         return codes['Description'][x]
     except:
-        return ("No Description returned for CAMEO code {0}".format(x))
+        return "No Description returned for CAMEO code {0}".format(x)
