@@ -21,3 +21,6 @@
 
 2016-11-03
   Added ability to pull GKG 1.0 data
+
+2016-11-06
+  GDELT changed url structure for 2.0 events database.
